GateKeeperV3/container-allowed-ports/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8scontainerallowedports
spec:
  crd:
    spec:
      names:
        kind: K8sContainerAllowedPorts
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            allowedPorts:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scontainerallowedports

        violation[{"msg": msg}] {
          input.review.object.metadata.namespace != "kube-system"
          container := input.review.object.spec.containers[_]
          port := container.ports[_]
          format_int(port.containerPort, 10, portstr)
          satisfied := [good | allowedPort := input.parameters.allowedPorts[_]; good := (portstr == allowedPort)]
          not any(satisfied)
          msg := sprintf("Container port %v for container %v has not been whitelisted.", [portstr, container.name])
        }

        violation[{"msg": msg}] {
          input.review.object.metadata.namespace != "kube-system"
          container := input.review.object.spec.initContainers[_]
          port := container.ports[_]
          format_int(port.containerPort, 10, portstr)
          satisfied := [good | allowedPort := input.parameters.allowedPorts[_]; good := (portstr == allowedPort)]
          not any(satisfied)
          msg := sprintf("Container port %v for container %v has not been whitelisted.", [portstr, container.name])
        }
